--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
+displayName=Improved Tile Indicators
+author=LeikvollE
 support=
 description=An example greeter plugin
-tags=
-plugins=ExamplePlugin
+tags=indicators,tile
+plugins=io.leikvolle.tileindicators.ImprovedTileIndicatorsPlugin
