--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
 displayName=Improved Tile Indicators
 author=LeikvollE
 support=
-description=An example greeter plugin
+description=An improved version of the tile indicators plugin
 tags=indicators,tile
 plugins=io.leikvolle.tileindicators.ImprovedTileIndicatorsPlugin
